# deepagent-temporal

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
deepagent_temporal/: __init__.py  activity.py  agent.py  config.py  middleware.py  serialization.py  streaming.py  worker.py
docs/: DESIGN.md  REQUIREMENTS.md  architecture-decisions.md  comparison.md  index.md  retry-semantics.md  sandbox-tradeoffs.md  serialization.md  streaming-design.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: concepts.md  human-in-the-loop.md  local-development.md  streaming.md  sub-agents.md  worker-affinity.md
docs/reference/: agent.md  config.md  middleware.md  streaming.md
examples/: deepagent_temporal_example.py
tests/: conftest.py  test_deepagent_agent.py  test_deepagent_e2e.py  test_deepagent_integration.py  test_deepagent_middleware.py  test_redis_streaming.py  test_serialization.py  test_streaming_e2e.py  test_streaming_tokens.py
